--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "material-ui": "^0.20.0",
     "papaparse": "^4.3.7",
     "react": "^16.2.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
@@ -22,8 +23,8 @@
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "prestart": "gulp price-sass",
-    "prebuild": "gulp price-sass",
+    "prestart": "gulp sass",
+    "prebuild": "gulp sass",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
